Start coding payment system
