# Booking service/internal/pkg/api/handlers.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"booking_service/pkg/api/v1"
+	"fmt"
 	"github.com/labstack/echo/v4"
 	"log"
 	"net/http"
@@ -11,19 +12,18 @@ func (s *BookingServer) PostApiV1Bookings(ctx echo.Context) error {
 	var bookingRequest api.BookingRequest
 
 	if err := ctx.Bind(&bookingRequest); err != nil {
-		log.Printf("Error binding bookings request: %v\n", err)
+		log.Printf("Failed to binding bookings request: %v\n", err)
 		return ctx.JSON(http.StatusBadRequest, err)
 	}
 	modelRequest, err := fromApiBookingRequest(&bookingRequest)
 	if err != nil {
-		log.Printf("Error binding bookings request: %v\n", err)
+		log.Printf("Failed to process bookings request: %v\n", err)
 		return ctx.JSON(http.StatusBadRequest, err)
 	}
-	if err := s.bookingService.Service.CreateClient(modelRequest); err != nil {
+	if err = s.bookingService.Service.CreateClient(modelRequest); err != nil {
 		log.Printf("Error creating booking: %v\n", err)
 		return ctx.JSON(http.StatusInternalServerError, err)
 	}
-
 	return ctx.JSON(http.StatusCreated, &bookingRequest)
 }
 
@@ -53,4 +53,25 @@ func (s *BookingServer) GetApiV1BookingsHotel(ctx echo.Context, params api.GetAp
 	}
 
 	return ctx.JSON(http.StatusOK, apiBookings)
+}
+
+func (s *BookingServer) PostApiV1WebhookPayment(ctx echo.Context) error {
+	var paymentRequest api.PaymentWebhookRequest
+	if err := ctx.Bind(&paymentRequest); err != nil {
+		log.Printf("Invalid webhook request: %v", err)
+		return ctx.JSON(http.StatusBadRequest, err)
+	}
+
+	if paymentRequest.Status != api.Ok {
+		log.Printf("Invalid status: %v", paymentRequest.Status)
+		return ctx.JSON(http.StatusBadRequest, fmt.Errorf("booking has not been paid"))
+	}
+
+	err := s.bookingService.Service.UpdatePaymentStatus(paymentRequest.BookingId)
+	if err != nil {
+		log.Printf("Error updating booking: %v\n", err)
+		return ctx.JSON(http.StatusInternalServerError, err)
+	}
+	log.Printf("Updated booking: %v\n", paymentRequest.BookingId)
+	return ctx.JSON(http.StatusOK, nil)
 }
