# Payment System/pkg/models/models.go
@@ -1,0 +1,10 @@
+package models
+
+type PaymentRequest struct {
+	Amount    float64
+	BookingId string
+}
+
+type PaymentResponse struct {
+	PaymentId string
+}
